--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,12 +26,4 @@
   }
   
   /* Añade estilos específicos para cada botón si es necesario */
-  .Button:nth-of-type(1) {
-    /* Estilos para el primer botón */
-  }
-  
-  .Button:nth-of-type(2) {
-    /* Estilos para el segundo botón */
-  }
-  
-  /* Agrega estilos adicionales según sea necesario */
+  /* .Button:nth-of-type(1) { */
