--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,29 +1,35 @@
 /* Header.css */
 /* Estilos para el AppBar y sus elementos secundarios */
-.AppBar {
-    background-color: #333;
-    color: #fff;
-    position: sticky;
-    width: 100%;
-    top: 0;
-    z-index: 1000;
-  }
-  
-  /* Estilos específicos para el contenido dentro de Toolbar y Typography */
-  .Toolbar {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  /* Ajustes adicionales para los botones y enlaces */
-  .Button {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  .Button:hover {
-    color: #535bf2;
-  }
+.MuiAppBar-root {
+  background-color: #333;
+  color: #fff;
+  position: sticky;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+}
+
+/* Estilos específicos para el contenido dentro de Toolbar y Typography */
+.MuiToolbar-root {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Ajustes adicionales para los botones y enlaces */
+.MuiButton-root {
+  color: inherit;
+  text-decoration: none;
+}
+
+.MuiButton-root:hover {  /*Cuando ponemos el raton sobre el boton pero no sobre el link*/
+  background-color: rgb(164, 252, 0);
+}
+
+.MuiButton-root:hover .MuiLink-root {  /*Cuando ponemos el raton sobre el link del boton*/
+  font-size: 1.1em;
+  color: #fc0000;
+}
+
   
   /* Añade estilos específicos para cada botón si es necesario */
   /* .Button:nth-of-type(1) { */
