--- a/src/App.css
+++ b/src/App.css
@@ -46,10 +46,31 @@ body {
 /* Estilos para el contenido principal dentro de la card */
 .card {
   padding: 2em;
-  margin-top: 4em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 /* Estilos adicionales si es necesario */
 .read-the-docs {
   color: #888;
 }
+
+.welcome-text {
+  font-size: 16px;
+  color: #8e8e8e;
+  margin-bottom: 20px;
+  max-width: 650px;
+  line-height: 1.5;
+  margin: 0 auto;
+  text-align: center;
+
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 500ms ease-out, transform 500ms ease-out; /* Agregamos transiciones */
+
+  &.visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
