--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column; /* Cambiado a column para que los elementos se apilen verticalmente */
+  padding: 0;
+  background-image: url('../resources/bground.jpg');
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 h1 {
